@@ -1,3 +1,5 @@
+- allow automatic loading of modules for DISPLAY_VGA devclass with 'drvinst'
+  if explictly requested
 - recognize new kernel-4.9 drivers
 
 2.21
